src/snapshots/elelemer__openai_api__tests__message_serialises_system_message_as_expected.snap
---
source: src/openai_api.rs
expression: message
---
{
  "role": "system",
  "content": "Why is the sea blue?"
}
