src/snapshots/elelemer__openai_api__tests__message_serialises_user_message_as_expected.snap
---
source: src/openai_api.rs
expression: message
---
{
  "role": "user",
  "content": "When did the Mayans live?"
}
