src/snapshots/elelemer__openai_api__tests__open_ai_api_client_build_request_returns_expected_value.snap
---
source: src/openai_api.rs
expression: outcome
---
{
  "model": "qxz-supreme-sota",
  "messages": [
    {
      "role": "system",
      "content": "You are a helpful assistant"
    },
    {
      "role": "user",
      "content": "Which countries use Fahrenheit for temperatures?"
    }
  ],
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
