src/snapshots/elelemer__openai_api__tests__open_ai_api_client_new_returns_expected_value.snap
---
source: src/openai_api.rs
expression: outcome
---
{
  "api_key": "[ SECRET ]",
  "sse_client": {
    "read_timeout": {
      "secs": 10,
      "nanos": 0
    },
    "url": "https://example.com/v1/chat/completions"
  }
}
