src/snapshots/elelemer__openai_api__tests__open_ai_request_serialises_as_expected.snap
---
source: src/openai_api.rs
expression: request
---
{
  "model": "qxz-supreme-sota:2t",
  "messages": [
    {
      "role": "system",
      "content": "You are a helpful assistant"
    },
    {
      "role": "user",
      "content": "Did the Mayans live at the same time as the Aztecs?"
    }
  ],
  "stream": true,
  "stream_options": {
    "include_usage": true
  }
}
